bad/div_invalid_types_int_array.example_compiler_output
ERROR
[1mbad/div_invalid_types_int_array.lat:3:4: [1;31merror: [0;1mdivision is defined only for int values, not `int` and `string[]`[m
	0 / new string[3];
	  [1;32m^[m
